crates/ir/tests/snapshots/lower_test__ownership__coerce_borrow.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__coerce_borrow

fn len(v0: String) -> Int =
  42

fn test(v1: ~String) -> Int =
  let v2: Int = call len(v1)
  let v3: Int = call len(v1)
  v3
