crates/ir/tests/snapshots/lower_test__ownership__let_annotation_drops_own.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__let_annotation_drops_own

fn id(v0: Int) -> Int =
  v0

fn test() -> Int =
  let_join v4(v1: ~Int) =
    let v2: Int = call id(v1)
    let v3: Int = call id(v1)
    v3
  in
  jump v4(2)
